<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Home Temperature</string>

    <string name="first_run_msg">Started for the first time. Please wait while downloading data</string>
    <string name="load_server_data_msg">Refresh data</string>

    <string name="menu_settings">Settings</string>

    <string name="nav_current_temp">Temperature</string>
    <string name="nav_past_temps">Past Temps</string>
    <string name="nav_analytics">Analytics</string>
    <string name="nav_link1">Developer Home</string>
    <string name="nav_links">Links</string>

    <string name="bottom_sheet_text">Temperature figures are updated every 60 minutes. The date and time are European Central Time</string>
    <string name="transition_string">transitionString</string>

    <string name="network_disabled_message">No connection to the network. Please enable the network connection to download data</string>

</resources>
